--- a/public/css/login.css
+++ b/public/css/login.css
@@ -102,3 +102,10 @@ body {
   font-size: 16px;
   font-weight: bold;
 }
+
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* <-- Centra el botón */
+}
